--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/Amgen.jpg" />
+    <link rel="icon" type="image/png" href="/TRP.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amgen</title>
+    <title>TC Energy</title>
   </head>
   <body>
     <div id="root"></div>
